# quarry

./: .gitignore  README.md  bench_media_build.py  fill_media.py  migrate_fts_contentless.py  pyproject.toml  rebuild_text.py
docs/: REPORT-2026-06-24.md  VOCABULARY.md
docs/superpowers/plans/: 2026-07-01-mindmaze-01-decode.md
output/maps/: CONTDLX.tsv  CONTSTD.tsv
quarry/: assets.py  cli.py  content.py  corpus.py  ingest.py  media.py  mindmaze.py  parallel.py  store.py
tests/: test_assets.py  test_content.py  test_corpus.py  test_eit.py  test_ingest.py  test_media.py  test_media_store.py  test_mindmaze.py  test_mindmaze_ingest.py  test_mindmaze_real.py  test_mindmaze_store.py  test_parallel.py  test_store.py
